--- a/src/mangosd/mangosd.conf.dist.in
+++ b/src/mangosd/mangosd.conf.dist.in
@@ -807,6 +807,13 @@ Motd = "Welcome to the Massive Network Game Object Server."
 #        Default: 1 (allow)
 #                 0 (not allow)
 #
+#
+#	Fake.WHO.List
+#        Add fake players to fill in WHO (who is online list, "O" button) list if there is less then 50
+#        50 real players online (need to set online=2 in charcter database in order to work)
+#        Default: 0 (disabled)
+#                 1 (enabled)
+#
 ###################################################################################################################
 
 AllowTwoSide.Accounts = 1
@@ -819,6 +826,7 @@ AllowTwoSide.Interaction.Mail = 0
 AllowTwoSide.WhoList = 0
 AllowTwoSide.AddFriend = 0
 TalentsInspecting = 1
+Fake.Who.List = 0
 
 ###################################################################################################################
 # CREATURE SETTINGS
