some tests (fp)

--- a/src/mangosd/mangosd.conf.dist.in
+++ b/src/mangosd/mangosd.conf.dist.in
@@ -194,7 +194,7 @@ GridUnload = 1
 SocketSelectTime = 10000
 GridCleanUpDelay = 300000
 MapUpdateInterval = 100
-ChangeWeatherInterval = 600000
+ChangeWeatherInterval = 5400000
 PlayerSave.Interval = 900000
 PlayerSave.Stats.MinLevel = 0
 PlayerSave.Stats.SaveOnlyOnLogout = 1
@@ -741,7 +741,7 @@ InstantLogout = 1
 DisableWaterBreath = 4
 AllFlightPaths = 0
 AlwaysMaxSkillForLevel = 0
-ActivateWeather = 0
+ActivateWeather = 1
 CastUnstuck = 1
 MaxSpellCastsInChain = 10
 Instance.IgnoreLevel = 0
